# investors-calculator

./: .gitignore  MANIFEST.in  README.MD  requirements.txt  setup.cfg
src/calculator/: company.py  crud_handler.py  financial.py  init_db.py  input_util.py  main.py  top_ten_handler.py
src/investors_calculator.egg-info/: PKG-INFO  SOURCES.txt
