[metadata]
name = investors-calculator
version = 3.10
packages = []
url =
license =
author = jwisskirchen
author_email =
description = Graduate Jetbrains academy Python project with sqlite DB and SQLAlchemy

[options]
packages = find:
package_dir =
    =src
include_package_data = True

[options.packages.find]
where = src